--- a/src/app/i18n/locales/fr/common.json
+++ b/src/app/i18n/locales/fr/common.json
@@ -150,7 +150,7 @@
   "Enjoyfreeshippingonus": "Profitez de la livraison gratuite chez nous ",
   "Shippingandtaxesarecomputedatcheckout": "Les frais de livraison et les taxes sont calculés à la caisse",
   "ViewCart": "Voir le panier",
-  "Checkout": "Finaliser votre commande sur WhatsApp",
+  "Checkout": "Paiement",
   "MyDashboard": "Mon tableau de bord",
   "Searchforproducts": "Rechercher des produits",
   "Reasonisarequired": "La raison est requise",
